--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,11 @@
     "@typescript-eslint/indent": ["error", 2],
     "prettier/prettier": ["error"],
     "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "warn"
+    "react-hooks/exhaustive-deps": "warn",
+    "import/prefer-default-export": "off",
+    "@typescript-eslint/explicit-function-return-type": [
+      "warn",
+      { "allowExpressions": true }
+    ]
   }
 }
