--- a/package.json
+++ b/package.json
@@ -41,32 +41,32 @@
   },
   "devDependencies": {
     "@rollup/plugin-url": "^4.0.2",
-    "@testing-library/react-hooks": "3.2.1",
-    "@types/jest": "25.2.1",
-    "@types/node": "^13.11.0",
-    "@types/react": "^16.9.32",
-    "@typescript-eslint/eslint-plugin": "^2.26.0",
-    "@typescript-eslint/parser": "^2.26.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-typescript": "^7.2.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jest": "23.8.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^3.0.0",
+    "@testing-library/react-hooks": "3.4.2",
+    "@types/jest": "26.0.14",
+    "@types/node": "14.11.10",
+    "@types/react": "16.9.53",
+    "@typescript-eslint/eslint-plugin": "4.4.1",
+    "@typescript-eslint/parser": "4.4.1",
+    "eslint": "7.11.0",
+    "eslint-config-airbnb-typescript": "12.0.0",
+    "eslint-config-prettier": "6.13.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jest": "24.1.0",
+    "eslint-plugin-jsx-a11y": "6.3.1",
+    "eslint-plugin-prettier": "3.1.4",
+    "eslint-plugin-react": "7.21.4",
+    "eslint-plugin-react-hooks": "4.1.2",
     "gh-pages": "^2.2.0",
-    "jest": "25.2.7",
-    "prettier": "^1.19.1",
-    "react": "16.13.1",
-    "react-test-renderer": "16.13.1",
+    "jest": "26.5.3",
+    "prettier": "2.1.2",
+    "react": "16.14.0",
+    "react-test-renderer": "16.14.0",
     "rollup": "^1.32.1",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.2",
     "rollup-plugin-typescript2": "^0.27.0",
-    "ts-jest": "25.3.1",
-    "typescript": "^3.8.3"
+    "ts-jest": "26.4.1",
+    "typescript": "^4.0.3"
   }
 }
