--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "use-countdown-timer",
-  "version": "1.2.1",
+  "version": "2.0.0-next1",
   "description": "React hook exposing a countdown timer with optional expiration and reset callbacks",
   "keywords": [
     "countdown",
@@ -16,8 +16,8 @@
     "url": "https://github.com/LobsterBandit/use-countdown-timer"
   },
   "main": "dist/index.js",
-  "module": "dist/index.es.js",
-  "jsnext:main": "dist/index.es.js",
+  "module": "dist/es/index.js",
+  "jsnext:main": "dist/es/index.js",
   "types": "dist/index.d.ts",
   "homepage": "https://github.com/LobsterBandit/use-countdown-timer",
   "engines": {
@@ -25,7 +25,8 @@
     "npm": ">=5"
   },
   "files": [
-    "dist"
+    "dist",
+    "!index.test.d.ts"
   ],
   "scripts": {
     "build": "rollup -c",
@@ -33,14 +34,18 @@
     "predeploy": "cd example && npm install && npm run build",
     "deploy": "gh-pages -d example/build",
     "lint": "eslint --ext .ts src",
-    "test": "jest"
+    "test": "jest",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {},
   "peerDependencies": {
     "react": "^16.8.6"
   },
   "devDependencies": {
-    "@rollup/plugin-url": "^4.0.2",
+    "@rollup/plugin-commonjs": "15.1.0",
+    "@rollup/plugin-node-resolve": "9.0.0",
+    "@rollup/plugin-typescript": "6.0.0",
+    "@rollup/plugin-url": "5.0.1",
     "@testing-library/react-hooks": "3.4.2",
     "@types/jest": "26.0.14",
     "@types/node": "14.11.10",
@@ -61,12 +66,10 @@
     "prettier": "2.1.2",
     "react": "16.14.0",
     "react-test-renderer": "16.14.0",
-    "rollup": "^1.32.1",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-peer-deps-external": "^2.2.2",
-    "rollup-plugin-typescript2": "^0.27.0",
+    "rollup": "2.32.0",
+    "rollup-plugin-typescript2": "0.28.0",
     "ts-jest": "26.4.1",
+    "tslib": "^2.0.3",
     "typescript": "^4.0.3"
   }
 }
