--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
     "outDir": "build",
-    "module": "esnext",
-    "target": "es5",
-    "lib": ["es6", "es2016", "es2017"],
+    "module": "es2015",
+    "target": "es2015",
+    "lib": ["es6", "es2016", "es2017", "esnext"],
     "sourceMap": true,
     "allowJs": false,
     "declaration": true,
@@ -20,8 +20,7 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
-    "resolveJsonModule": true,
-    "noEmit": true
+    "resolveJsonModule": true
   },
   "include": ["src"]
 }
